fix: Minor fixes

--- a/product.html
+++ b/product.html
@@ -208,10 +208,10 @@
         <img src="static/images/social.jpg" class="social">
         <div class="list3">
             <ul style="list-style-type: none;">
-                <li>Reach Us </li>
+                <li>Reach Us <hr></li>
                 <li>E-92, Masjid Math, Greater Kailash 3,</li>
-                <li>New Delhi 110048, India</li>
-                <li>Contact Us </li>
+                <li>New Delhi 110048, India</li> <br>
+                <li>Contact Us <hr> </li>
                 <li>9999839722</li>
                 <li>contact@artattack.com</li>
             </ul>
