--- a/main.html
+++ b/main.html
@@ -1,30 +1,43 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="static/css/main.css">
+    <title>Artsy</title>
 </head>
 
 <body>
     <h1>BROWSE ART BY STYLE</h1>
     <div class="main">
         <div>
-            <img src="contemp.jpg" class="topimg">
-            <div class="centered"><h1>ABSTRACT ART</h1><</div>
+            <img src="static/images/contemp.jpg" class="topimg imagelist">
 
+            <div class="centered1 centered">
+                <h1 style="opacity: 1; filter:brightness(100%)">ABSTRACT ART</h1>
+            </div>
         </div>
         <br><br><br>
         <div class="bottom">
             <div class="subbottom">
-                <img src="static/images/pop.jpg" height="224" width="225">
-                <div class="centered1"><h2>POP ART</h2></div>
+                <img src="static/images/pop.jpg" height="224" width="225" class="imagelist">
+                <div class="centered1">
+                    <h2>POP ART</h2>
+                </div>
             </div>
             <div class="subbottom">
-                <img src="static/images/bad.jpg" height="235" width="225">
-                <div class="centered1"><h2>CONTEMPORARY ART</h2></div>
+                <img src="static/images/bad.jpg" height="235" width="225" class="imagelist">
+                <div class="centered1">
+                    <h2>CONTEMPORARY <br>ART</h2>
+                </div>
             </div>
             <div class="subbottom">
-                <img src="static/images/syrreilsm.jpg" height="224" width="225">
-                <div class="centered1"><h2>SURREALISM ART</h2></div>
+                <img src="static/images/syrreilsm.jpg" height="224" width="225" class="imagelist">
+                <div class="centered1">
+                    <h2>SURREALISM <br>ART</h2>
+                </div>
             </div>
         </div>
     </div>
