--- a/creators.html
+++ b/creators.html
@@ -21,20 +21,21 @@
         </div>
         <br><br><br>
         <div class="bottom">
-            <div class="subbottom">
-                <img src="static/images/images (3).jpg" height="224" width="225" class="imagelist">
+            <div class="subb
+                <img src="static/images/images (3).jpg" height="224" width="225">
                 <div>
                     <h2>ASH BINES</h2>
                 </div>
             </div>
             <div class="subbottom">
-                <img src="static/images/220px-Bob_at_Easel.jpg" height="235" width="225" class="imagelist">
+                <img src="static/images/220px-Bob_at_Easel.jpg" height="235" width="225">
                 <div>
                     <h2>BOB DAVIS</h2>
                 </div>
             </div>
             <div class="subbottom">
-                <img src="static/images/images (3).jpg" height="224" width="225" class="imagelist">
+
+                <img src="static/images/images (3).jpg" height="224" width="225">
                 <div>
                     <h2>ESTHER KING</h2>
                 </div>
