feat: prices.html

--- a/prices.html
+++ b/prices.html
@@ -13,31 +13,21 @@
     <h1>OUR CREATORS</h1>
     <div class="main">
         <div>
-            <img src="static/images/download (1).jpg" class="imagelist" style="width: 20vw; margin-right: 100px;">
-            <img src="static/images/imagen.jpg" class="imagelist" style="width: 35vw;">
-        </div>
-        <div>
-                <h2 style="margin-left:-170px;">VINCENT VAN <span>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</span>MILES TELLER</h2>
+            <div class="subbottom">
+                <img src="static/images/crop1.jpg" class="imagelist" style="margin-right: 100px;">
+                <img src="static/images/crop2.jpg" class="imagelist" style="width: 15vw;">
+            </div>
         </div>
         <br><br><br>
         <div class="bottom">
             <div class="subbottom">
-                <img src="static/images/images (3).jpg" height="224" width="225" class="imagelist">
-                <div>
-                    <h2>ASH BINES</h2>
-                </div>
+                <img src="static/images/crop3.jpg" height="224" width="225" class="imagelist">
             </div>
             <div class="subbottom">
-                <img src="static/images/220px-Bob_at_Easel.jpg" height="235" width="225" class="imagelist">
-                <div>
-                    <h2>BOB DAVIS</h2>
-                </div>
+                <img src="static/images/crop4.jpg" height="235" width="225" class="imagelist">
             </div>
             <div class="subbottom">
-                <img src="static/images/images (3).jpg" height="224" width="225" class="imagelist">
-                <div>
-                    <h2>ESTHER KING</h2>
-                </div>
+                <img src="static/images/crop5.jpg" height="224" width="225" class="imagelist">
             </div>
         </div>
     </div>
