fix: creators.html

--- a/creators.html
+++ b/creators.html
@@ -13,8 +13,8 @@
     <h1>OUR CREATORS</h1>
     <div class="main">
         <div>
-            <img src="static/images/download (1).jpg" class="imagelist" style="width: 20vw; margin-right: 100px;">
-            <img src="static/images/imagen.jpg" class="imagelist" style="width: 35vw;">
+            <img src="static/images/download (1).jpg" style="width: 20vw; margin-right: 100px;">
+            <img src="static/images/imagen.jpg" style="width: 35vw;">
         </div>
         <div>
                 <h2 style="margin-left:-170px;">VINCENT VAN <span>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</span>MILES TELLER</h2>
