--- a/prices.html
+++ b/prices.html
@@ -5,43 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="static/css/main.css">
+    <link rel="stylesheet" href="static/css/prices.css">
     <title>Artsy</title>
 </head>
 
 <body>
     <div class="main">
-    <h1>OUR CREATORS</h1>
+    <h1>BROWSE ART BY PRICES</h1>
         <div>
-            <img src="static/images/download (1).jpg" style="width: 20vw; margin-right: 100px;">
-            <img src="static/images/imagen.jpg" style="width: 35vw;">
+            <img src="static/images/images8.jpg" style="width: 48vw; margin-right: 100px;">
+            <img src="static/images/download.jpg" style="width: 23vw;height: 26vw;">
         </div>
-        <div>
-                <h2 style="margin-left:-170px;">VINCENT VAN <span>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp</span>MILES TELLER</h2>
-        </div>
-        <br><br><br>
+                <br><br><br>
         <div class="bottom">
             <div class="subbottom">
-                <img src="static/images/images (3).jpg" height="224" width="225">
-                <div>
-                    <h2>ASH BINES</h2>
-                </div>
+                <img src="static/images/images7.jpg" height="250" width="225">
             </div>
             <div class="subbottom">
-                <img src="static/images/220px-Bob_at_Easel.jpg" height="235" width="225">
-                <div>
-                    <h2>BOB DAVIS</h2>
-                </div>
+                <img src="static/images/images6.jpg" height="250" width="225">
             </div>
             <div class="subbottom">
-                <img src="static/images/images (3).jpg" height="224" width="225">
-                <div>
-                    <h2>ESTHER KING</h2>
-                </div>
+                <img src="static/images/images4.jpg" height="250" width="300">
             </div>
         </div>
     </div>
-
+<br><br>
 </body>
 
 </html>
